Remove <center> tag. The Center tag is not OK to use, it is deprecated.

--- a/testdiv.html
+++ b/testdiv.html
@@ -5,12 +5,12 @@
   </head>
 
   <body>
-    <center><div>
+    <div>
       Verde<br />
     </div>
     <div clas="2" id="first">
       Albastru<br />
-    </div></center>
+    </div>
   </body>
 
 </html>
