--- a/testdiv.html
+++ b/testdiv.html
@@ -8,7 +8,7 @@
     <div>
       Verde<br />
     </div>
-    <div clas="2" id="first">
+    <div class="2" id="first">
       Albastru<br />
     </div>
   </body>
