Remove redundant <br /> tags.

--- a/testdiv.html
+++ b/testdiv.html
@@ -6,10 +6,10 @@
 
   <body>
     <div>
-      Verde<br />
+      Verde
     </div>
     <div class="2" id="first">
-      Albastru<br />
+      Albastru
     </div>
   </body>
 
