Improve structure a bit

--- a/testdiv.html
+++ b/testdiv.html
@@ -5,10 +5,10 @@
   </head>
 
   <body>
-    <div>
+    <div class="box box-1">
       Verde
     </div>
-    <div class="2" id="first">
+    <div class="box box-2">
       Albastru
     </div>
   </body>
