Add centering solution.

--- a/testdiv.html
+++ b/testdiv.html
@@ -5,11 +5,13 @@
   </head>
 
   <body>
-    <div class="box box-1">
-      Verde
-    </div>
-    <div class="box box-2">
-      Albastru
+    <div class="outer-box">
+      <div class="box box-1">
+        Verde
+      </div>
+      <div class="box box-2">
+        Albastru
+      </div>
     </div>
   </body>
 
