Clean up, also centered menu.

--- a/help.html
+++ b/help.html
@@ -1,26 +1,25 @@
 <html>
   <head>
-    <title>Transalpina-harta </title>
-	<link href="style.css" rel="stylesheet" type="text/css">
+    <title>Transalpina-harta</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <style>
+      body {
+        background-color: #320001;
+      }
+      nav ul {
+        width: 200px;
+        margin: auto;
+      }
+    </style>
   </head>
-  <body background="#320001">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <table style="width:100%">
-	<tr>
-		<td valign="top">
-    <div>
-      <div>
-        <div>
-		   <ul align="center">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="harta.html">Harta</a></li>
-            <li><a href="poze.html">Poze</a></li>
-            <li><a href="istoria.html">Istoria</a></li>
-          </ul>
-          <br>
-          <br>
-		 </div>
-		</div>
-	</div>
-	</body>
+  <body background="">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="harta.html">Harta</a></li>
+        <li><a href="poze.html">Poze</a></li>
+        <li><a href="istoria.html">Istoria</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
