--- a/excercises/home.html
+++ b/excercises/home.html
@@ -11,6 +11,7 @@
       <ul>
         <li><a href="">Acasa</li>
         <li><a href="">Ramurile</li>
+          <!-- Why don`t appear this? Start-->
           <ul>
             <li><a href="">Infanterie</a></li>
             <li><a href="">Artilerie</a></li>
@@ -20,6 +21,7 @@
             <li><a href="">Parasutisti</a></li>
             <li><a href="">Geniu</a></li>
           </ul>
+          <!-- End -->
         <li><a href="">Lista echipamente</li>
         <li><a href="">Galerie</li>
           <ul>
