--- a/excercises/home.html
+++ b/excercises/home.html
@@ -15,6 +15,19 @@
         This will mess up most of you page.
         -->
         <li><a href="">Acasa</li>
+          <!-- how cand i made when u put the mouse on the box "Ramurile" (without click) appear an submenu and appear this
+       <li>
+          <ul>
+            <li><a href="">Infanterie</a></li>
+            <li><a href="">Artilerie</a></li>
+            <li><a href="">Tancuri</a></li>
+            <li><a href="">Rachete si Artilerie Antiaeriana</a></li>
+            <li><a href="">Vanatori de munte</a></li>
+            <li><a href="">Parasutisti</a></li>
+            <li><a href="">Geniu</a></li>
+          </ul>
+        </li>
+        -->
         <li><a href="">Ramurile</li>
 
         <!--
